@@ -6,6 +6,7 @@ import transaction
 from pyramid.util import DottedNameResolver
 from pyramid.tweens import EXCVIEW
 from pyramid_tm.compat import reraise
+from pyramid.security import unauthenticated_userid
 
 resolver = DottedNameResolver(None)
 
@@ -46,6 +47,8 @@ def tm_tween_factory(handler, registry, transaction=transaction):
         manager = transaction.manager
         number = attempts
 
+        userid = unauthenticated_userid(request)
+
         while number:
             number -= 1
             try:
@@ -61,6 +64,9 @@ def tm_tween_factory(handler, registry, transaction=transaction):
                     veto = commit_veto(request, response)
                     if veto:
                         raise AbortResponse(response)
+                t = manager.get()
+                t.setUser(userid, '')
+                t.note(request.path)
                 manager.commit()
                 return response
             except AbortResponse:
