@@ -1,3 +1,9 @@
+Next release
+------------
+
+- Write username and ``request.path`` as transaction metadata via ``t.setUser``
+  and ``t.note`` respectively during a commit.
+
 0.6 (2012-12-26)
 ----------------
 
